syntax = "proto3";

package task;

service TaskService {
  rpc RunTask (TaskRequest) returns (TaskResponse);
}

message TaskRequest {
  int32 thread_id = 1;
  int32 total_threads = 2;
  bytes challenge = 3;
  int64 test_duration = 4;
}

message TaskResponse {
  int64 nonce_count = 1;
}
